# media-server

./: .ansible-lint  .ansiblelint  .gitatrributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .sops.yaml  Dockerfile  README.md  age_key_gen.yaml  ansible.cfg  aqua.yaml  ci.py  ci.sops  cleanup.sh  configuration.yaml  container.yaml  container_run.yaml  container_systemd.yaml  container_update.yaml  control_node.yaml  dependencies.yaml  guix.scm  init.sh  install.py  main.py  main.yaml  maintenance.yaml  managed_node.yaml  mise.ci.toml  mise.dagger.toml  mise.toml  netdata.yaml  partition.yaml  pymedusa.yaml  pyproject.toml  renovate-config-validator.sh  renovate.json  requirements.yaml  staging.yaml  (+3 more)
.devcontainer/: Dockerfile  aqua.yaml  dependencies.json  dependencies.yaml  devcontainer.json  devcontainer.py  guix.scm  initializeCommand.sh  main.py  package-lock.json  package.json  playbook.yaml  postCreateCommand.sh  pyproject.toml  requirements.in  requirements.txt
.devcontainer/templates/: .gitignore.j2  channels.scm.j2  init.el.j2
.github/: renovate.json
.github/workflows/: dagger.yaml  deployment.yaml  renovate-branch.yaml  renovate-repo.yaml  renovate-update.yaml  renovate.yaml
ci/: Dockerfile  aqua.yaml  deployment.py  helper.py  helper_functions.py  requirements.in  requirements.txt  retry.sh  run.sh
cue/: application.cue  dependencies.go  dump_tool.cue  fact.cue  go.mod  go.sum  main.cue  snapper.cue
cue.mod/: module.cue
cue/cue.mod/: module.cue
cue/src/: application.cue
docs/: README.md
group_vars/all/: auth.sops.yaml  disks.sops.yaml  exe.sops.yaml  global.sops.yaml  main.sops.yaml  renovate.sops.yaml  restic.sops.yaml  wifiqr.sops.yaml
group_vars/control_node/: auth.sops.yaml  example_vault.yaml  global.sops.yaml  global.yaml
group_vars/fedora_iot/: main.sops.yaml
group_vars/managed_node/: auth.sops.yaml  auth.yaml  crypt.sh  global.sops.yaml  global.yaml  netdata.yaml
group_vars/server/: crypt.sh  global.sops.yaml  main.sops.yaml  service.yaml
group_vars/service_node/: service.yaml
group_vars/staging/: main.sops.yaml
install/: install.sh  known_hosts_add.sh  requirements.yaml
inventory/: host.yaml  internal.yaml  inventory.yaml
openwrt/: .gitignore  README.md  config.sops.json  config.sops.yaml  main.py
renovate/: config.json  docker-compose.yaml
roles/pymedusa/: README.md
secret/deployment/: podman.sops  wg0.sops.ini
terraform/fedora-iot/: .terraform.lock.hcl  main.tf  secret.sops.yaml
terraform/vm/: main.tf  (+3 more)
(+707 files in other folders)
