[project]
name = "infra"
version = "0.1.0"
description = "Code for running self-hosted services using podman and ansible"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "devcontainer"
]

[tool.uv]
cache-dir = "./.uv_cache"
python-preference = "managed"

[tool.uv.sources]
devcontainer = [{ path = ".devcontainer" }]

[dependency-groups]
dev = [
    "ansible-lint>=25.1.2",
    "ansible>=11.2.0",
    "dagger-io>=0.18.17",
    "jmespath>=1.0.1",
    "mitogen>=0.3.22",
    "pip>=25.0.1",
    "python-dotenv>=1.0.1",
    "transmission-rpc>=7.0.11",
]
dagger = [
    "ansible>=11.2.0",
    "jmespath>=1.0.1",
    "mitogen>=0.3.22",
    "requests>=2.32.3",
]
ci = ["dagger-io>=0.18.17"]
