[project]
name = "infra"
version = "0.1.0"
description = "Code for running self-hosted services using podman and ansible"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ansible-lint>=25.1.2",
    "ansible>=11.2.0",
    "jmespath>=1.0.1",
    "mitogen>=0.3.22",
    "python-dotenv>=1.0.1",
    "transmission-rpc>=7.0.11",
]

[tool.uv]
cache-dir = "./.uv_cache"
python-preference = "managed"

[dependency-groups]
dev = [
    "podman-compose>=1.5.0",
]
